--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main>
     <section>
       <div class="item">
-        <img src="https://picsum.photos/300/300/?random" />
+        <img src="https://picsum.photos/300/300/?random" alt="image" />
         <h3>
           Lorem ipsum dolor sit amet
         </h3>
@@ -31,7 +31,7 @@
         </p>
       </div>
       <div class="item">
-        <img src="https://picsum.photos/300/300/?random" />
+        <img src="https://picsum.photos/300/300/?random" alt="image" />
         <h3>
           Lorem ipsum dolor sit amet
         </h3>
@@ -40,7 +40,7 @@
         </p>
       </div>
       <div class="item">
-        <img src="https://picsum.photos/300/300/?random" />
+        <img src="https://picsum.photos/300/300/?random" alt="image" />
         <h3>
           Lorem ipsum dolor sit amet
         </h3>
